--- a/index.html
+++ b/index.html
@@ -72,5 +72,18 @@
         <p> © 2023 SumayyaTabassum Shaik. All rights reserved!</p>
     </footer>
 </body>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/63c8ea7247425128790e7d96/1gn4d7kv9';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 </html>
